--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "reactfront",
+  "proxy": "http://localhost:8080",
   "version": "0.1.0",
-  "private": true, 
+  "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -10,10 +11,12 @@
     "bootstrap": "^5.3.3",
     "bootstrap-4-react": "^0.0.59",
     "bootstrap4": "^0.0.1-security",
+    "cookie": "^0.6.0",
     "http-proxy-middleware": "^3.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-bootstrap-icons": "^1.11.4",
+    "react-cookies": "^0.1.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
@@ -25,8 +28,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  
-
   "eslintConfig": {
     "extends": [
       "react-app",
